# aws-boto3

./: pyproject.toml
aws/: app.py  client.py  config.py  connection.py  errorhandler.py
aws/ec2/: enum.py  helper.py  model.py  route.py  schema.py
aws/ec2/power/: helper.py  route.py
aws/iam/: helper.py  model.py  route.py  schema.py
aws/s3/: helper.py  model.py  route.py  schema.py
aws/s3/bucket/: enum.py  helper.py  model.py  route.py  schema.py
