[tool.poetry]
name = "aws-boto3"
version = "0.1.0"
description = "Managing AWS solutions using Boto3"
authors = ["Furkan Güney f-guney@outlook.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
boto3 = "^1.34.122"
marshmallow = "^3.21.3"
flask-smorest = "^0.44.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
